// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConflictResolutionComponent Path text field displayed 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 30,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <Text>
      Mode
    </Text>
    <div
      aria-label="Mode"
      className="tabs"
      role="radiogroup"
    >
      <div
        className="tab"
      >
        <StyledLabelBase
          className="settingsV2Label  selectedRadio"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="radio"
          tabIndex={0}
        >
          Last Write Wins (default)
        </StyledLabelBase>
      </div>
      <div
        className="tab"
      >
        <StyledLabelBase
          className="settingsV2Label  unselectedRadio"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="radio"
          tabIndex={0}
        >
          Merge Procedure (custom)
        </StyledLabelBase>
      </div>
    </div>
  </Stack>
  <StyledTextFieldBase
    id="conflictResolutionLwwTextField"
    label="Conflict Resolver Property"
    onChange={[Function]}
    onRenderLabel={[Function]}
    styles={
      Object {
        "fieldGroup": Object {
          "borderColor": "",
          "height": 25,
          "selectors": Object {
            ":disabled": Object {
              "backgroundColor": "#ddd",
              "borderColor": "#969696",
            },
          },
          "width": 300,
        },
      }
    }
  />
</Stack>
`;

exports[`ConflictResolutionComponent Sproc text field displayed 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 30,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <Text>
      Mode
    </Text>
    <div
      aria-label="Mode"
      className="tabs"
      role="radiogroup"
    >
      <div
        className="tab"
      >
        <StyledLabelBase
          className="settingsV2Label  unselectedRadio"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="radio"
          tabIndex={0}
        >
          Last Write Wins (default)
        </StyledLabelBase>
      </div>
      <div
        className="tab"
      >
        <StyledLabelBase
          className="settingsV2Label  selectedRadio"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="radio"
          tabIndex={0}
        >
          Merge Procedure (custom)
        </StyledLabelBase>
      </div>
    </div>
  </Stack>
  <StyledTextFieldBase
    id="conflictResolutionCustomTextField"
    label="Stored procedure"
    onChange={[Function]}
    onRenderLabel={[Function]}
    styles={
      Object {
        "fieldGroup": Object {
          "borderColor": "",
          "height": 25,
          "selectors": Object {
            ":disabled": Object {
              "backgroundColor": "#ddd",
              "borderColor": "#969696",
            },
          },
          "width": 300,
        },
      }
    }
  />
</Stack>
`;
